k8s/overlays/aws/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medical-platform-dev
  labels:
    app.kubernetes.io/part-of: medical-platform
    environment: dev
